2011-12-16  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/launch/launching/OprofileManualLaunchConfigurationDelegate.java
		(preExec): Set the current project for manual launches.

2011-09-21  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/launch/configuration/OprofileSetupTab.java: 
	* src/org/eclipse/linuxtools/oprofile/launch/configuration/OprofileEventConfigTab.java: 
	* src/org/eclipse/linuxtools/oprofile/launch/configuration/OprofileCounter.java: 
	* src/org/eclipse/linuxtools/oprofile/launch/configuration/EventConfigCache.java:
		Use Integer.ValueOf rather than declaring a new Integer and don't
		allocate a new String.

2011-09-20  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/launch/configuration/OprofileEventConfigTab.java: 
	* src/org/eclipse/linuxtools/oprofile/launch/configuration/EventConfigCache.java:
		Change event field from int to String, and change event related methods
		to take a String rather than int.

2011-02-11  Severin Gehwolf  <sgehwolf@redhat.com>

	* META-INF/MANIFEST.MF: Bump version to 0.3.1.
	* src/org/eclipse/linuxtools/oprofile/launch/launching/OprofileManualLaunchConfigurationDelegate.java (postExec):
	Remove isTerminated() check for OprofiledControlDialog so that it always opens.
	* ChangeLog: New file.